fixed navbar collapse

--- a/src/index.css
+++ b/src/index.css
@@ -340,7 +340,7 @@ h6 {
   color: #fff;
 }
 
-*/ @media (max-width: 991px) {
+/* @media (max-width: 991px) {
   .mobile-nav-toggle {
     display: block;
   }
@@ -348,7 +348,7 @@ h6 {
   .navbar ul {
     display: none;
   }
-}
+} */
 
 .navbar-mobile {
   position: fixed;
